add pagination and improve endpoints
